Fix bug 637125 - Minimonht's navigation buttons are too narrow on Windows 7. r=philipp

--- a/calendar/base/themes/common/widgets/minimonth.css
+++ b/calendar/base/themes/common/widgets/minimonth.css
@@ -88,6 +88,7 @@ minimonth {
 
 .minimonth-nav-btns {
   padding: 0px;
+  min-width: 20px;
   list-style-image: url("chrome://calendar/skin/widgets/nav-buttons.png");
   -moz-user-focus: normal;
 }
